// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Project/View default 1`] = `
<div
  className="sc-ckVGcZ keIsel"
>
  <div
    style={
      Object {
        "alignItems": "flex-start",
        "color": "#1d1d20",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": "18px 0",
        "width": "100%",
      }
    }
  >
    <div>
      <h2
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 100,
            "margin": 0,
          }
        }
      >
        <span>
          Project
        </span>
      </h2>
      <h1
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 600,
            "letterSpacing": "-0.12px",
            "lineHight": 1.25,
            "margin": 0,
          }
        }
      >
        Project Name
      </h1>
    </div>
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "border": "none",
          "borderRadius": "48px",
          "color": "#1d1d20",
          "cursor": "pointer",
          "display": "inline-block",
          "fontSize": "18px",
          "margin": "0",
          "minHeight": "48px",
          "outline": "none",
          "padding": "0",
          "position": "absolute",
          "right": 0,
          "top": 6,
        }
      }
    >
      <svg
        style={
          Object {
            "fill": "#1d1d20",
            "height": "60px",
            "width": "60px",
          }
        }
        viewBox="0 0 60 60"
      >
        <path
          d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-jKJlTe irvofs"
  >
    <ul
      className="sc-eHgmQL eAMEUT"
    >
      <li
        className="sc-cvbbAY cyKJNb"
      >
        <div
          style={
            Object {
              "backgroundColor": "#f0efef",
              "borderTop": "2px solid #1d1d20",
              "color": "#1d1d20",
              "display": "flex",
              "flexDirection": "column",
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "padding": "12px 14px 14px",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#a6a7aa",
                "fontSize": "12px",
                "marginBottom": "14px",
              }
            }
          >
            Data Sources
          </div>
          <span
            className="sc-jWBwVP LIoZT"
          >
            0
          </span>
        </div>
      </li>
      <li
        className="sc-cvbbAY cyKJNb"
      >
        <div
          style={
            Object {
              "backgroundColor": "#f0efef",
              "borderTop": "2px solid #1d1d20",
              "color": "#1d1d20",
              "display": "flex",
              "flexDirection": "column",
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "padding": "12px 14px 14px",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#a6a7aa",
                "fontSize": "12px",
                "marginBottom": "14px",
              }
            }
          >
            Users
          </div>
          <span
            className="sc-jWBwVP LIoZT"
          >
            2
          </span>
        </div>
      </li>
    </ul>
    <ul
      className="sc-eNQAEJ hsqJps"
    >
      <li
        className="sc-hMqMXs eOWQRB"
      >
        <div
          className="sc-kEYyzF krdrem"
        >
          <span
            className="sc-kkGfuU iNDLYA"
          >
            Last Update
          </span>
          <span
            className="sc-hSdWYo kVzqVH"
          >
            3 months ago
          </span>
        </div>
        <div
          className="sc-iAyFgw SdbMn"
        >
          <svg
            style={
              Object {
                "fill": "#1d1d20",
                "height": "30px",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </li>
      <li
        className="sc-hMqMXs eOWQRB"
      >
        <div
          className="sc-kEYyzF krdrem"
        >
          <span
            className="sc-kkGfuU iNDLYA"
          >
            Status
          </span>
          <span
            className="sc-hSdWYo kVzqVH"
          >
            Status
          </span>
        </div>
        <div
          className="sc-iAyFgw SdbMn"
        >
          <svg
            style={
              Object {
                "fill": "#1d1d20",
                "height": "30px",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </li>
      <li
        className="sc-hMqMXs eOWQRB"
      >
        <div
          className="sc-kEYyzF krdrem"
        >
          <span
            className="sc-kkGfuU iNDLYA"
          >
            Owner
          </span>
          <span
            className="sc-hSdWYo kVzqVH"
          >
            Firstname Lastname
          </span>
        </div>
        <div
          className="sc-iAyFgw SdbMn"
        >
          <svg
            style={
              Object {
                "fill": "#1d1d20",
                "height": "30px",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </li>
      <li
        className="sc-hMqMXs eOWQRB"
      >
        <div
          className="sc-kEYyzF krdrem"
        >
          <span
            className="sc-kkGfuU iNDLYA"
          >
            Title
          </span>
          <span
            className="sc-hSdWYo kVzqVH"
          >
            Project Name
          </span>
        </div>
        <div
          className="sc-iAyFgw SdbMn"
        >
          <svg
            style={
              Object {
                "fill": "#1d1d20",
                "height": "30px",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </li>
      <li
        className="sc-hMqMXs eOWQRB"
      >
        <div
          className="sc-kEYyzF krdrem"
        >
          <span
            className="sc-kkGfuU iNDLYA"
          >
            Description
          </span>
          <span
            className="sc-hSdWYo kVzqVH"
          >
            Description
          </span>
        </div>
        <div
          className="sc-iAyFgw SdbMn"
        >
          <svg
            style={
              Object {
                "fill": "#1d1d20",
                "height": "30px",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </li>
      <li
        className="sc-hMqMXs eOWQRB"
      >
        <div
          className="sc-kEYyzF krdrem"
        >
          <span
            className="sc-kkGfuU iNDLYA"
          >
            API
          </span>
          <span
            className="sc-hSdWYo kVzqVH"
          >
            schemacms/api/project_title
          </span>
        </div>
        <div
          className="sc-iAyFgw SdbMn"
        >
          <svg
            style={
              Object {
                "fill": "#1d1d20",
                "height": "30px",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </li>
    </ul>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#f0efef",
        "border": "none",
        "borderRadius": "48px",
        "color": "#1d1d20",
        "cursor": "pointer",
        "display": "inline-block",
        "fontSize": "18px",
        "height": "60px",
        "margin": "50px 0 20px 20px",
        "minHeight": "48px",
        "outline": "none",
        "padding": "0",
      }
    }
  >
    <svg
      style={
        Object {
          "fill": "#1d1d20",
          "height": "60px",
          "width": "60px",
        }
      }
      viewBox="0 0 60 60"
    >
      <path
        d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
      />
    </svg>
  </button>
  <div
    className="sc-htoDjs kycqz"
  >
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "color": "#1d1d20",
          "maxWidth": "360px",
          "minHeight": "100vh",
          "padding": "18px 20px 27px",
          "position": "fixed",
          "right": 0,
          "textAlign": "left",
          "top": 0,
          "transform": "translateX(100%)",
          "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
          "visibility": 0,
          "width": "100%",
        }
      }
    >
      <div
        className="sc-dnqmqq xpfMW"
      >
        <ul
          className="sc-iwsKbI sc-gZMcBi fYuGYd"
        >
          <li
            className="sc-VigVT sc-jTzLTM krLhSA"
            onClick={[Function]}
          >
            <span>
              Data Sources
            </span>
          </li>
          <li
            className="sc-VigVT sc-jTzLTM krLhSA"
            onClick={[Function]}
          >
            <span>
              Users
            </span>
          </li>
        </ul>
        <ul
          className="sc-iwsKbI sc-gqjmRU Uwame"
        >
          <li
            className="sc-VigVT sc-fjdhpX bAMrgH"
            onClick={[Function]}
          >
            Edit Project Settings
          </li>
          <li
            className="sc-VigVT sc-fjdhpX bAMrgH"
            onClick={[Function]}
          >
            Delete Project
          </li>
          <li
            className="sc-VigVT sc-fjdhpX bAMrgH"
            onClick={[Function]}
          >
            <span>
              Admin Settings
            </span>
          </li>
          <li
            className="sc-VigVT sc-fjdhpX bAMrgH"
            onClick={[Function]}
          >
            <span>
              Log Out
            </span>
          </li>
        </ul>
      </div>
      <button
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "none",
            "borderRadius": "48px",
            "color": "#1d1d20",
            "cursor": "pointer",
            "display": "inline-block",
            "fontSize": "18px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "position": "absolute",
            "right": 0,
            "top": "6px",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#1d1d20",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Project/View empty 1`] = `
<div
  className="sc-ckVGcZ keIsel"
>
  <div
    style={
      Object {
        "alignItems": "flex-start",
        "color": "#1d1d20",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": "18px 0",
        "width": "100%",
      }
    }
  >
    <div>
      <h2
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 100,
            "margin": 0,
          }
        }
      >
        <span>
          Project
        </span>
      </h2>
      <h1
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 600,
            "letterSpacing": "-0.12px",
            "lineHight": 1.25,
            "margin": 0,
          }
        }
      />
    </div>
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "border": "none",
          "borderRadius": "48px",
          "color": "#1d1d20",
          "cursor": "pointer",
          "display": "inline-block",
          "fontSize": "18px",
          "margin": "0",
          "minHeight": "48px",
          "outline": "none",
          "padding": "0",
          "position": "absolute",
          "right": 0,
          "top": 6,
        }
      }
    >
      <svg
        style={
          Object {
            "fill": "#1d1d20",
            "height": "60px",
            "width": "60px",
          }
        }
        viewBox="0 0 60 60"
      >
        <path
          d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-jzJRlG cROogJ"
  >
    <p
      style={
        Object {
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": "18px",
          "fontWeight": 200,
          "lineHeight": "1.33em",
          "margin": 0,
        }
      }
    >
      Project doesn't exist.
    </p>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#f0efef",
        "border": "none",
        "borderRadius": "48px",
        "color": "#1d1d20",
        "cursor": "pointer",
        "display": "inline-block",
        "fontSize": "18px",
        "height": "60px",
        "margin": "50px 0 20px 20px",
        "minHeight": "48px",
        "outline": "none",
        "padding": "0",
      }
    }
  >
    <svg
      style={
        Object {
          "fill": "#1d1d20",
          "height": "60px",
          "width": "60px",
        }
      }
      viewBox="0 0 60 60"
    >
      <path
        d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
      />
    </svg>
  </button>
  <div
    className="sc-htoDjs kycqz"
  >
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "color": "#1d1d20",
          "maxWidth": "360px",
          "minHeight": "100vh",
          "padding": "18px 20px 27px",
          "position": "fixed",
          "right": 0,
          "textAlign": "left",
          "top": 0,
          "transform": "translateX(100%)",
          "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
          "visibility": 0,
          "width": "100%",
        }
      }
    >
      <div
        className="sc-dnqmqq xpfMW"
      >
        <ul
          className="sc-iwsKbI sc-gZMcBi fYuGYd"
        >
          <li
            className="sc-VigVT sc-jTzLTM krLhSA"
            onClick={[Function]}
          >
            <span>
              Data Sources
            </span>
          </li>
          <li
            className="sc-VigVT sc-jTzLTM krLhSA"
            onClick={[Function]}
          >
            <span>
              Users
            </span>
          </li>
        </ul>
        <ul
          className="sc-iwsKbI sc-gqjmRU Uwame"
        >
          <li
            className="sc-VigVT sc-fjdhpX bAMrgH"
            onClick={[Function]}
          >
            Edit Project Settings
          </li>
          <li
            className="sc-VigVT sc-fjdhpX bAMrgH"
            onClick={[Function]}
          >
            Delete Project
          </li>
          <li
            className="sc-VigVT sc-fjdhpX bAMrgH"
            onClick={[Function]}
          >
            <span>
              Admin Settings
            </span>
          </li>
          <li
            className="sc-VigVT sc-fjdhpX bAMrgH"
            onClick={[Function]}
          >
            <span>
              Log Out
            </span>
          </li>
        </ul>
      </div>
      <button
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "none",
            "borderRadius": "48px",
            "color": "#1d1d20",
            "cursor": "pointer",
            "display": "inline-block",
            "fontSize": "18px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "position": "absolute",
            "right": 0,
            "top": "6px",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#1d1d20",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
